--- a/example-notary/Dockerfile
+++ b/example-notary/Dockerfile
@@ -17,15 +17,14 @@ RUN chmod 0755       /bin/start.sh
 
 
 FROM rust:bookworm AS builder_notary
+RUN rustup default 1.79.0
+
 WORKDIR /usr/src/tlsn
-COPY /tlsn .
+RUN git clone --branch tls-tee https://github.com/eternisai/tlsn .
+# COPY /eternis-tlsn .
 RUN pwd && echo "Current path logged"  # Added this line to log the current path
 
-RUN rustup default 1.79.0
-RUN cargo install --path notary-server
-
-
-#CMD ["sh", "-c", "pwd & ls & sleep 1000"] 
+RUN cargo install --path crates/notary/server
 
 FROM ubuntu:latest
 WORKDIR /root/app
@@ -36,10 +35,10 @@ RUN apt-get update && apt-get -y upgrade && apt-get install -y --no-install-reco
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 # Copy default fixture folder for default usage
-COPY --from=builder_notary /usr/src/tlsn/notary-server/fixture /app/fixture
+COPY --from=builder_notary /usr/src/tlsn/crates/notary/server/fixture /app/fixture/
 # Copy default config folder for default usage
-COPY --from=builder_notary /usr/src/tlsn/notary-server/config /app/config
-COPY --from=builder_notary /usr/local/cargo/bin/notary-server /usr/local/bin/notary-server
+COPY config_dev.yml /app/config/
+COPY --from=builder_notary /usr/local/cargo/bin/notary-server /app/
 
 # Label to link this image with the repository in Github Container Registry (https://docs.github.com/en/packages/learn-github-packages/connecting-a-repository-to-a-package#connecting-a-repository-to-a-container-image-using-the-command-line)
 LABEL org.opencontainers.image.source=https://github.com/tlsnotary/tlsn
